[tool.poetry]
name = "nanode"
version = "0.1.0"
description = ""
authors = ["Orhan Hirsch <orhanhenrik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ipaddr = "^2.2.0"
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
uvloop = "^0.14.0"
pure25519-blake2b = {git = "https://github.com/orhanhenrik/python-pure25519-blake2b.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
